--- a/css/home/_events.scss
+++ b/css/home/_events.scss
@@ -147,6 +147,7 @@
     height: 2vw;
     font-size: 1.6vw;
     line-height: 1.6vw;
+    vertical-align: center;
     border-radius:1vw;
     @media screen and (min-width: $mobile-break) {
       height: 1vw;
